[gd_scene load_steps=2 format=2]

[ext_resource path="res://SeleccionCategoria.gd" type="Script" id=1]

[node name="SeleccionCategoria" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 480, 720 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.7
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tierra" type="Button" parent="VBoxContainer"]
margin_right = 288.0
margin_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
action_mode = 0
text = "La Tierra"

[node name="Tierra_Sol" type="Button" parent="VBoxContainer"]
margin_top = 97.0
margin_right = 288.0
margin_bottom = 190.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "La Tierra y el Sol"

[node name="Astrologia" type="Button" parent="VBoxContainer"]
margin_top = 194.0
margin_right = 288.0
margin_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Astrolog√≠a"
[connection signal="pressed" from="VBoxContainer/Tierra" to="." method="_on_Tierra_pressed"]
[connection signal="pressed" from="VBoxContainer/Tierra_Sol" to="." method="_on_Luna_pressed"]
[connection signal="pressed" from="VBoxContainer/Astrologia" to="." method="_on_Astrologia_pressed"]
